--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,14 @@
     {% if title %}<title>&bull; {{ title }} &bull;</title>{% else %}<title>&bull; &mdash; &bull;</title>{% endif %}
     <link href="{{ url_for('static', filename='favicon.png') }}" rel="shortcut icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css" media="screen">
-    {% if refreshing %}<meta http-equiv=refresh content="10" />{% endif %}
-    {% if image or thumbs %}<script src="{{ url_for('static', filename='justify.js') }}"></script>{% endif %}
+    {% if refreshing %}
+    <script type="text/javascript">
+        window.onload=setTimeout('window.location.reload();', 15000);
+    </script>
+    {% endif %}
+    {% if image or thumbs %}
+    <script src="{{ url_for('static', filename='justify.js') }}"></script>
+    {% endif %}
 </head>
 <body style="background: rgb{{ getbg }};">
     <div id="main">
