--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,7 +6,7 @@
             <p>{{ uhr }}</p><br />
             <p>images: {{ length }}</p><br />
             {% if refreshing %}
-            <p>{{ yeah.next() }}</p><br />
+            <p class="scroll">{{ yeah }}</p><br />
             <p>dhcp: {{ leases }}</p><br />
             <p>served: {{ served }}</p><br />
             {% endif %}
