--- a/app/static/style.css
+++ b/app/static/style.css
@@ -58,84 +58,28 @@ a{
     text-align: center;
 }
 
-#content img{
+#sort img, #images img{
     max-width: 95%;
     max-height: 95%;
+    margin: 0 auto;
+}
+
+#images img{
+    display: none;
+}
+
+#text{
+    position: absolute;
+    left: 10px;
+    bottom: 5%;
+    text-align: left;
+}
+
+#text img{
+    display: inline-block;
+    max-height: 150px;
 }
 
 #error{
     margin: 5%;
-}
-
-#message, #bar, #thumbs{
-    background: rgb(128,128,128);
-    background: rgba(128,128,128,0.8);
-    position: fixed;
-    padding: 10px 5px;
-    border-radius: 5px;
-}
-
-#message, #thumbs{
-    top: 5%;
-    left: 10px;
-}
-
-#thumbs{
-    max-width: 85%;
-    height: 75%;
-    overflow: scroll;
-    padding: 5% 10px;
-}
-
-.nail{
-    background: rgb(255,255,255);
-    background: rgba(255,255,255,0.4);
-    border-radius: 5px;
-    border: 1px solid #000000;
-    height: 200px;
-    width: 200px;
-    margin: 5px 5px;
-    float: left;
-}
-
-.nail:hover{
-    background: rgb(127,127,127);
-    background: rgba(255,255,255,0.8);
-}
-
-.nail img{
-    max-width: 190px;
-    max-height: 190px;
-}
-
-
-#bar{
-    text-align: right;
-    top: 5%;
-    right: 10px;
-    height: 90%;
-    max-width: 10%;
-    overflow: hidden;
-}
-
-#bar input{
-    width: 90%;
-}
-
-#bar a[title='sort']{
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.vote p{
-    text-align: center;
-    padding: 15px 0;
-}
-
-.scroll{
-    width: 175%;
-    /*margin: 0 -150%;*/
-    text-align: center;
-    -webkit-marquee: auto medium infinite scroll normal;
-    overflow-x: -webkit-marquee;
 }
