--- a/app/static/style.css
+++ b/app/static/style.css
@@ -170,9 +170,7 @@ a:visited{
 }
 
 .scroll{
-    /*width: 200%;
-    margin: 0 -100%;
-    */text-align: left;
+    text-align: left;
     -webkit-marquee: auto medium infinite scroll normal;
     overflow-x: -webkit-marquee;
 }
