--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     {% if title %}<title>&bull; {{ title }} &bull;</title>{% else %}<title>&bull; &mdash; &bull;</title>{% endif %}
-    <link href="{{ url_for('static', filename='favicon.png') }}" rel="shortcut icon">
+    <link href="{{ url_for('favicon') }}" rel="shortcut icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css" media="screen">
     {% if images or sort %}
     <script src="{{ url_for('static', filename='justify.js') }}"></script>
